# abseil_gtest_cmake

./: .gitignore  CMakeLists.txt  install_and_run.sh
src/: main_test.cc
